# CodeE

./: CMakeLists.txt  README.md
include/: editor.hpp
src/: editor.cpp  main.cpp
